# website

./: .env.example  .gitignore  Cargo.toml  Dockerfile  index.html  leptosfmt.toml  tailwind.config.js
.github/workflows/: docker-image-publish.yml
assets/css/: custom.css
assets/plugins/highlightjs/: default.min.css
end2end/: tsconfig.json
src/: app.rs  lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/driven/: mod.rs
src/adapters/driven/drupal_jsonapi/: mod.rs
src/adapters/driven/drupal_jsonapi/entities/: decoupled_router.rs  fields.rs  jsonapi.rs  media.rs  mod.rs  navigation.rs  nodes.rs  paragraphs.rs  taxonomies.rs
src/adapters/driven/drupal_jsonapi/mappers/: article_mapper.rs  category_mapper.rs  common_mapper.rs  mod.rs  navigation_mapper.rs  page_mapper.rs  portfolio_mapper.rs
src/adapters/driven/drupal_jsonapi/repositories/: article_repository.rs  articles_repository.rs  category_repository.rs  layout_repository.rs  mod.rs  page_repository.rs  portfolio_repository.rs
src/adapters/driven/drupal_jsonapi/services/: http_client_service.rs  mod.rs  (+1 more)
src/adapters/driver/: mod.rs
src/application/: mod.rs
src/application/domain/: article.rs  article_content.rs  article_section.rs  common.rs  core.rs  layout.rs  mod.rs  page.rs  portfolio.rs  portfolio_section.rs
src/application/ports/driven/: for_fetching_article_data.rs  for_fetching_articles_data.rs  for_fetching_articles_featured_list.rs  for_fetching_articles_list.rs  for_fetching_categories_list.rs  for_fetching_menu_data.rs  for_fetching_page_data.rs  for_fetching_portfolio_data.rs  mod.rs
src/application/ports/driver/: for_displaying_article.rs  for_displaying_articles_list.rs  for_displaying_layout.rs  for_displaying_portfolio.rs  for_listing_articles.rs  mod.rs
src/application/use_cases/: get_layout_use_case.rs  mod.rs  show_article_detail_use_case.rs  show_articles_list_use_case.rs  show_articles_use_case.rs  show_portfolio_detail_use_case.rs  show_portfolio_use_case.rs
src/application/value_objects/: date.rs  identifier.rs  mod.rs  moderation_status.rs  required_text.rs  url.rs
src/cms_content/: mod.rs
src/cms_content/application/ports/: input.rs  output.rs
src/cms_content/application/services/: get_portfolio_service.rs  mod.rs
src/cms_content/domain/: common.rs  error.rs  mod.rs  portfolio.rs
src/components/: badge.rs  container.rs  mod.rs  timeline.rs
src/components/portfolio/: about_me.rs  blog.rs  blog_card.rs  latest_work.rs  latest_work_card.rs  mod.rs  portfolio.rs  resume.rs  services.rs  sidebar_menu.rs
src/features/portfolio/adapters/: mod.rs  node_portfolio.rs
src/features/portfolio/components/: about_me.rs  projects.rs  resume.rs
src/features/portfolio/models/: mod.rs  portfolio.rs
src/features/portfolio/pages/: index.rs
src/pages/: mod.rs  not_found.rs  portfolio.rs
src/portfolio/components/: about_me.rs  mod.rs  projects.rs  resume.rs
src/portfolio/pages/: index.rs
src/shared/: mod.rs
src/shared/api/models/: decoupled_router.rs  error.rs  field_content.rs  menu_items.rs  mod.rs  node_portfolio.rs  paragraph_content.rs
src/shared/api/services/: mod.rs  service.rs
src/shared/api/utils/: http_client.rs
src/shared/ui/: mod.rs
src/shared/ui/components/: badge.rs  mod.rs  navbar.rs
src/shared/ui/layouts/: basic.rs
src/shared/ui/models/: link.rs  media.rs  mod.rs  timeline.rs
src/shared/uikit/: mod.rs
src/shared/uikit/adapters/: mod.rs
src/shared/uikit/components/: missing.rs  mod.rs  timeline.rs
src/shared/uikit/layouts/: basic.rs
src/shared/uikit/models/: mod.rs
src/uikit/: mod.rs
src/uikit/components/: mod.rs
src/utilities/: cache_client.rs  http_client.rs  mod.rs
src/v0/features/: mod.rs
src/v0/features/portfolio/: mod.rs
src/v0/shared/api/: mod.rs
style/: main.css  tailwind.css
tests/fixtures/: article_http_decoupled_router_200.json  basic_request_500.json  decoupled_router_200.json  decoupled_router_404.json  http_article_collection_200.json  http_article_decoupled_router_200.json  http_article_resource_200.json  http_articles_collection_200.json  http_decoupled_router_200.json  http_decoupled_router_404.json  http_portfolio_resource_200.json  menu_items_200.json  node_portfolio_200.json
(+86 files in other folders)
